# sped-2-sql

./: .gitignore  Cargo.toml  README.md  diesel.toml  efd.csv
.cargo/: config.toml
migrations/: 01_create_reg_tables.sql  1_16.sql
migrations/2025-05-18-051322_contribuicoes/: up.sql
migrations/2025-05-18-051322_efd/: up.sql
migrations/2025-05-18-051332_icms_ipi/: up.sql
migrations/2025-05-18-051426_files/: up.sql
scripts/: generate_efd_models.rs
sped-to-database-derive/src/: lib.rs
src/: database.rs  lib.rs  macros.rs  main.rs  schemas.rs  sped.rs
src/migrations/2025-05-18-051322_efd/: down.sql  up.sql
src/migrations/2025-05-18-051332_icms_ipi/: down.sql  up.sql
src/models/: files.rs  mod.rs  reg_0000.rs  reg_0001.rs  reg_0035.rs  reg_0100.rs  reg_0110.rs  reg_0140.rs  reg_0150.rs  reg_0190.rs  reg_0200.rs  reg_0400.rs  reg_0500.rs  reg_9999.rs  reg_c001.rs  reg_c010.rs  reg_c100.rs  reg_c110.rs  reg_c180.rs  reg_c181.rs  reg_c185.rs  reg_p200.rs  reg_trait.rs  registry.rs  schema.rs  traits.rs  utils.rs
src/models/efd/: efd_0000.rs  efd_0001.rs  efd_0035.rs  efd_0100.rs  efd_0110.rs  efd_0111.rs  efd_0120.rs  efd_0140.rs  efd_0145.rs  efd_0150.rs  efd_0190.rs  efd_0200.rs  efd_0205.rs  efd_0206.rs  efd_0208.rs  efd_0400.rs  efd_0450.rs  efd_0500.rs  efd_0600.rs  efd_0990.rs  efd_1001.rs  efd_1010.rs  efd_1020.rs  efd_1100.rs  efd_1300.rs  efd_1500.rs  efd_1700.rs  efd_1800.rs  efd_1900.rs  efd_1990.rs  efd_9001.rs  efd_9900.rs  efd_9990.rs  efd_9999.rs  efd_a001.rs  efd_a010.rs  efd_a100.rs  efd_a110.rs  efd_a111.rs  efd_a120.rs  (+140 more)
src/models/icms-ipi/: reg_0000.rs  reg_0001.rs  reg_0002.rs  reg_0005.rs
src/models/icms_ipi/: mod.rs  reg_0000.rs  reg_0001.rs  reg_0002.rs  reg_0005.rs  reg_0015.rs  reg_0100.rs  reg_0150.rs  (+191 more)
src/schemas/: efd_0000.rs  efd_0001.rs  efd_0035.rs  efd_0100.rs  efd_0110.rs  efd_0111.rs  efd_0120.rs  efd_0140.rs  efd_0145.rs  efd_0150.rs  efd_0190.rs  efd_0200.rs  efd_0205.rs  efd_0206.rs  efd_0208.rs  efd_0400.rs  efd_0450.rs  efd_0500.rs  efd_0600.rs  efd_0990.rs  efd_1001.rs  efd_1010.rs  efd_1020.rs  efd_1100.rs  efd_1300.rs  efd_1500.rs  efd_1700.rs  efd_1800.rs  efd_1900.rs  efd_1990.rs  efd_9001.rs  efd_9900.rs  efd_9990.rs  efd_9999.rs  efd_a001.rs  efd_a010.rs  efd_a100.rs  efd_a110.rs  efd_a111.rs  efd_a120.rs  (+308 more)
src/utils/: database.rs  file_structure.rs  mod.rs  reg_hierarchy.rs
(+21 files in other folders)
