[package]
name = "sped-to-database"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.45.0", features = [
    "time",
    "rt",
    "macros",
    "rt-multi-thread",
    "fs",
    "io-util",
] }
chrono = { version = "0.4", features = ["serde"] }
encoding_rs = "0.8.35"
once_cell = "1.21.3"
futures = "0.3.31"
anyhow = "1.0.98"
indexmap = "2.8.0"
async-trait = "0.1.77"
"log" = "0.4.27"
diesel = { version = "2.2.10", features = ["sqlite", "r2d2", "32-column-tables"] }