[package]
name = "sped-to-database"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "generate_efd_models"
path = "scripts/generate_efd_models.rs"

[dependencies]
tokio = { version = "1.45.1", features = [
    "time",
    "rt",
    "macros",
    "rt-multi-thread",
    "fs",
    "io-util",
    "sync",
] }
encoding_rs = "0.8.35"
once_cell = "1.21.3"
futures = "0.3.31"
anyhow = "1.0.98"
indexmap = "2.8.0"
async-trait = "0.1.77"
async-recursion = "1.1.1"
"log" = "0.4.27"
diesel = { version = "2.2.11", features = [
    "sqlite",
    "r2d2",
    "64-column-tables",
] }
diesel_migrations = "2.2.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
lazy_static = "1.5.0"
regex = "1.11.1"
